<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".fragments.MenuFragment">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="373dp"
        android:layout_height="194dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/wooden_background" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/appTitle"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:shadowColor = "#000"
                android:shadowDx = "-8"
                android:shadowDy = "-1"
                android:shadowRadius = "1"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="1"
        android:padding="16dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <Button
            android:id="@+id/button_play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:shadowColor = "#000"
            android:shadowDx = "-8"
            android:shadowDy = "-1"
            android:shadowRadius = "1"/>

        <Button
            android:id="@+id/button_about"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/brown"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:shadowColor = "#000"
            android:shadowDx = "-8"
            android:shadowDy = "-1"
            android:shadowRadius = "1"/>

        <Button
            android:id="@+id/button_exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/brown"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:shadowColor = "#000"
            android:shadowDx = "-8"
            android:shadowDy = "-1"
            android:shadowRadius = "1"/>

    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@color/brown"
        android:gravity="center"
        android:shadowColor="#000"
        android:shadowDx="-4"
        android:shadowDy="-1"
        android:shadowRadius="1"
        android:text="@string/easter_egg"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>