<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/windowAbout"
    android:layout_width="wrap_content"
    android:layout_height="700dp"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="358dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/teamTitle"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        android:background="@drawable/rounded_dark_brown"
        android:shadowColor = "#000"
        android:shadowDx = "-7"
        android:shadowDy = "-1"
        android:shadowRadius = "2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="450dp"
        android:layout_height="550dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_dark_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamMembers" />

        <TextView
            android:id="@+id/teamMembers"
            android:layout_width="255dp"
            android:layout_height="327dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:lineSpacingExtra="10sp"
            android:shadowColor="#000"
            android:shadowDx="-6"
            android:shadowDy="-3"
            android:shadowRadius="2"
            android:text="@string/devs"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

