<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_background"
    tools:context=".fragments.GameViewFragment">


    <LinearLayout
        android:id="@+id/gameInfoSection"
        android:layout_width="600dp"
        android:layout_height="170dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        >

        <!-- Game Name -->

        <!-- Moves Box -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/puzzleNameBox"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners">

            <!-- Puzzle Name -->
            <TextView
                android:id="@+id/puzzle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/puzzle"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="3dp"
                android:shadowColor = "#000"
                android:shadowDx = "-8"
                android:shadowDy = "-1"
                android:shadowRadius = "1"/>

            <TextView
                android:id="@+id/puzzleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="2dp"
                android:shadowColor="#000"
                android:shadowDx="-3"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/puzzle" />

            <ImageView
                android:id="@+id/arrowRight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintStart_toEndOf="@+id/puzzle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.701" />

            <ImageView
                android:id="@+id/arrowLeft"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/puzzle"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.701" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_corners">

            <TextView
                android:id="@+id/movesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/moves"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="2dp"
                android:shadowColor = "#000"
                android:shadowDx = "-7"
                android:shadowDy = "-1"
                android:shadowRadius = "1"/>

            <TextView
                android:id="@+id/movesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movesTitle"
                android:padding="2dp"
                android:shadowColor = "#000"
                android:shadowDx = "-3"
                android:shadowDy = "-1"
                android:shadowRadius = "1"/>

            <!-- Record -->
            <TextView
                android:id="@+id/recordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movesCount"
                android:padding="2dp"
                android:shadowColor = "#000"
                android:shadowDx = "-3"
                android:shadowDy = "-1"
                android:shadowRadius = "1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="900px"
        android:layout_height="900px"
        android:layout_below="@id/gameInfoSection"
        android:layout_gravity="center"
        android:layout_marginBottom="252dp"
        android:background="@drawable/rounded_corners"
        android:columnCount="6"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:id="@+id/buttonSection"
        android:layout_width="403dp"
        android:layout_height="94dp"
        android:layout_below="@id/gridLayout"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:foreground="@null"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/pause"
            android:scaleType="fitCenter"

            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/redo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/undo"
            android:scaleType="fitCenter"
            android:src='@drawable/undo' />

        <ImageButton
            android:id="@+id/reset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/reset"
            android:scaleType="fitCenter"
            android:src="@drawable/reset" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="160px"
        android:background="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.26" />

</androidx.constraintlayout.widget.ConstraintLayout>